figue/tests/integration/snapshots/main__integration__subcommand__wrong_argument_style_for_nested_subcommand.snap
---
source: crates/figue/tests/integration/subcommand.rs
expression: "strip_ansi_escapes :: strip_str(& err.to_string())"
---
Error: could not parse command-line arguments

Sources:
├─ cli --settings.*
└─ defaults

command.. Ci::.. ci

Run with --help for usage information.
Error: unknown flag: --action
   ╭─[ <cli>:1:4 ]
   │
 1 │ ci --action gen
   │    ────┬───  
   │        ╰───── unknown flag: --action
───╯
Error: unexpected argument: gen. Did you mean 'generate'?
   ╭─[ <cli>:1:13 ]
   │
 1 │ ci --action gen
   │             ─┬─  
   │              ╰─── unexpected argument: gen. Did you mean 'generate'?
───╯
